# pyfluid

./: .flake8  Dockerfile  README.md  pipeline.yml  pyproject.toml
.github/workflows/: pipeline.yml
pyfluid/: logger.py  simulation_controller.py
pyfluid/simulation_configuration/boundary_conditions/: boundary_conditions.py
pyfluid/simulation_configuration/fluid_properties/: fluid_properties.py
pyfluid/simulation_configuration/geometry_properties/: geometry_properties.py
pyfluid/simulation_configuration/performance_settings/: performance_settings.py
pyfluid/simulation_configuration/simulation_parameters/: simulation_parameters.py
pyfluid/simulation_configuration/solver_settings/: solver_settings.py
