[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "pyfluid"
version = "0.1.0"
description = "A high-performance Computational Fluid Dynamics (CFD) simulation package for Python."
authors = [  # Information about the authors
  {name = "Paul MAZZIA", email = "p.mazzia63@gmail.com"}
]
license = {file = "LICENSE"}
keywords = ["CFD", "fluid dynamics", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"  # Minimum required Python version

